Configure gradle to only run tests for specific versions of Java when using the -PtestN gradle property