@@ -21,12 +21,6 @@ verifyInstrumentation {
   exclude('org.springframework.ws:spring-ws-core:3.0.11.RELEASE')
 }
 
-test {
-    if (project.hasProperty("test9") || project.hasProperty("test10")) {
-        jvmArgs "--add-modules=java.xml.ws"
-    }
-}
-
 site {
     title 'Spring Web Services'
     type 'Framework'
